Fix Azure endpoint properties and baseUrl computation