@@ -2,8 +2,12 @@ package io.quarkiverse.langchain4j.azure.openai.runtime;
 
 import static io.quarkiverse.langchain4j.runtime.OptionalUtil.firstOrDefault;
 
+import java.util.ArrayList;
 import java.util.function.Supplier;
 
+import dev.langchain4j.model.chat.ChatLanguageModel;
+import dev.langchain4j.model.chat.StreamingChatLanguageModel;
+import dev.langchain4j.model.embedding.EmbeddingModel;
 import io.quarkiverse.langchain4j.azure.openai.AzureOpenAiChatModel;
 import io.quarkiverse.langchain4j.azure.openai.AzureOpenAiEmbeddingModel;
 import io.quarkiverse.langchain4j.azure.openai.AzureOpenAiStreamingChatModel;
@@ -13,14 +17,17 @@ import io.quarkiverse.langchain4j.azure.openai.runtime.config.Langchain4jAzureOp
 import io.quarkiverse.langchain4j.openai.QuarkusOpenAiClient;
 import io.quarkus.runtime.ShutdownContext;
 import io.quarkus.runtime.annotations.Recorder;
+import io.smallrye.config.ConfigValidationException;
+import io.smallrye.config.ConfigValidationException.Problem;
 
 @Recorder
 public class AzureOpenAiRecorder {
+    static final String AZURE_ENDPOINT_URL_PATTERN = "https://%s.openai.azure.com/openai/deployments/%s";
 
-    public Supplier<?> chatModel(Langchain4jAzureOpenAiConfig runtimeConfig) {
+    public Supplier<ChatLanguageModel> chatModel(Langchain4jAzureOpenAiConfig runtimeConfig) {
         ChatModelConfig chatModelConfig = runtimeConfig.chatModel();
         var builder = AzureOpenAiChatModel.builder()
-                .baseUrl(getBaseUrl(runtimeConfig))
+                .endpoint(getEndpoint(runtimeConfig))
                 .apiKey(runtimeConfig.apiKey())
                 .apiVersion(runtimeConfig.apiVersion())
                 .timeout(runtimeConfig.timeout())
@@ -39,16 +46,16 @@ public class AzureOpenAiRecorder {
 
         return new Supplier<>() {
             @Override
-            public Object get() {
+            public ChatLanguageModel get() {
                 return builder.build();
             }
         };
     }
 
-    public Supplier<?> streamingChatModel(Langchain4jAzureOpenAiConfig runtimeConfig) {
+    public Supplier<StreamingChatLanguageModel> streamingChatModel(Langchain4jAzureOpenAiConfig runtimeConfig) {
         ChatModelConfig chatModelConfig = runtimeConfig.chatModel();
         var builder = AzureOpenAiStreamingChatModel.builder()
-                .baseUrl(getBaseUrl(runtimeConfig))
+                .endpoint(getEndpoint(runtimeConfig))
                 .apiKey(runtimeConfig.apiKey())
                 .apiVersion(runtimeConfig.apiVersion())
                 .timeout(runtimeConfig.timeout())
@@ -66,16 +73,16 @@ public class AzureOpenAiRecorder {
 
         return new Supplier<>() {
             @Override
-            public Object get() {
+            public StreamingChatLanguageModel get() {
                 return builder.build();
             }
         };
     }
 
-    public Supplier<?> embeddingModel(Langchain4jAzureOpenAiConfig runtimeConfig) {
+    public Supplier<EmbeddingModel> embeddingModel(Langchain4jAzureOpenAiConfig runtimeConfig) {
         EmbeddingModelConfig embeddingModelConfig = runtimeConfig.embeddingModel();
         var builder = AzureOpenAiEmbeddingModel.builder()
-                .baseUrl(getBaseUrl(runtimeConfig))
+                .endpoint(getEndpoint(runtimeConfig))
                 .apiKey(runtimeConfig.apiKey())
                 .apiVersion(runtimeConfig.apiVersion())
                 .timeout(runtimeConfig.timeout())
@@ -85,18 +92,44 @@ public class AzureOpenAiRecorder {
 
         return new Supplier<>() {
             @Override
-            public Object get() {
+            public EmbeddingModel get() {
                 return builder.build();
             }
         };
     }
 
-    private String getBaseUrl(Langchain4jAzureOpenAiConfig runtimeConfig) {
-        var baseUrl = runtimeConfig.baseUrl();
+    static String getEndpoint(Langchain4jAzureOpenAiConfig runtimeConfig) {
+        var endpoint = runtimeConfig.endpoint();
 
-        return !baseUrl.trim().isEmpty() ? baseUrl
-                : String.format("https://%s.openai.azure.com/openai/deployments/%s", runtimeConfig.resourceName(),
-                        runtimeConfig.deploymentId());
+        return (endpoint.isPresent() && !endpoint.get().trim().isBlank()) ? endpoint.get()
+                : constructEndpointFromConfig(runtimeConfig);
+    }
+
+    private static String constructEndpointFromConfig(Langchain4jAzureOpenAiConfig runtimeConfig) {
+        var resourceName = runtimeConfig.resourceName();
+        var deploymentName = runtimeConfig.deploymentName();
+
+        if (resourceName.isEmpty() || deploymentName.isEmpty()) {
+            var configProblems = new ArrayList<>();
+
+            if (resourceName.isEmpty()) {
+                configProblems.add(createConfigProblem("resource-name"));
+            }
+
+            if (deploymentName.isEmpty()) {
+                configProblems.add(createConfigProblem("deployment-name"));
+            }
+
+            throw new ConfigValidationException(configProblems.toArray(new Problem[configProblems.size()]));
+        }
+
+        return String.format(AZURE_ENDPOINT_URL_PATTERN, resourceName.get(), deploymentName.get());
+    }
+
+    private static ConfigValidationException.Problem createConfigProblem(String key) {
+        return new ConfigValidationException.Problem(String.format(
+                "SRCFG00014: The config property quarkus.langchain4j.azure-openai.%s is required but it could not be found in any config source",
+                key));
     }
 
     public void cleanUp(ShutdownContext shutdown) {
